--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,37 +1,28 @@
 [package]
-name = "wasm_runtime_layer"
-version = "0.2.1"
+name = "pyodide_wasm_runtime_layer"
+version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"
+authors = [
+    "Juniper Tyree <juniper.tyree@helsinki.fi>",
+    "Freja Roberts <ten3roberts@gmail.com>",
+    "Douglas Dwyer <dougmdwyer@hotmail.com>",
+    "Tei Leelo Roberts <ten3roberts@gmail.com>",
+]
+repository = "https://github.com/juntyr/pyodide-wasm-runtime-layer"
 readme = "README.md"
 description = """
-Compatibility interface for WASM runtimes.
+WASM runtime compatibility interface implementation for the webbrowser
+WebAssembly runtime, exposed through Pyodide.
 """
 
 [dependencies]
-anyhow = { version = "1.0.71", default-features = false, features = [ "std" ] }
-fxhash = { version = "0.2.1", default-features = false }
-ref-cast = { version = "1.0.19", default-features = false }
-smallvec = { version = "1.11.0", default-features = false }
+anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
+fxhash = { version = "0.2", default-features = false }
+wasm_runtime_layer = { version = "0.2", default-features = false }
 
-wasmi = { version = ">=0.0.0", optional = true, default-features = false, features = [ "std" ] }
-wasmtime = { version = ">=0.0.0", optional = true, default-features = false, features = [ "cranelift" ] }
-tracing = { version = "0.1", optional = true }
-slab = { version = "0.4", optional = true }
-
-wasm-bindgen = { version = "0.2", optional = true }
-js-sys = { version = "0.3", optional = true }
-wasmparser = { version = "0.118", default-features = false, optional = true }
-
-[dev-dependencies]
-wat = "1.0"
-wasm-bindgen-test = "0.3"
-
-[features]
-backend_wasmi = [ "wasmi" ]
-backend_wasmtime = [ "wasmtime" ]
-backend_web = [ "wasm-bindgen", "js-sys", "slab", "wasmparser" ]
-
-[package.metadata."docs.rs"]
-all-features = true
+tracing = { version = "0.1", default-features = false, optional = true }
+slab = { version = "0.4", default-features = false }
+wasm-bindgen = { version = "0.2", default-features = false }
+js-sys = { version = "0.3", default-features = false }
+wasmparser = { version = "0.118", default-features = false }
