Add support for ExternRef

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ WebAssembly runtime, exposed through Pyodide.
 [dependencies]
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
 fxhash = { version = "0.2", default-features = false }
+id-arena = { version = "2.2", default-features = false, features = ["std"] }
 pyo3 = { version = "0.20", default-features = false, features = ["anyhow", "macros"] }
 tracing = { version = "0.1", default-features = false, optional = true }
-wasmparser = { version = "0.200", default-features = false }
+wasmparser = { version = "0.201", default-features = false }
 wasm_runtime_layer = { version = "0.2", default-features = false }
 wobbly = { version = "0.1", default-features = false, features = ["std"] }
 
