Remove pyo3/abi3 feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ WebAssembly runtime, exposed through Pyodide.
 [dependencies]
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
 fxhash = { version = "0.2", default-features = false }
-pyo3 = { version = "0.20", default-features = false, features = ["anyhow", "macros", "abi3"] }
+pyo3 = { version = "0.20", default-features = false, features = ["anyhow", "macros"] }
 tracing = { version = "0.1", default-features = false, optional = true }
 wasmparser = { version = "0.201", default-features = false }
 wasm_runtime_layer = { version = "0.3", default-features = false }
