--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ WebAssembly runtime, exposed through Pyodide.
 
 [dependencies]
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
+flagset = { version = "0.4.5", default-features = false, features = ["std"] }
 fxhash = { version = "0.2", default-features = false }
 pyo3 = { version = "0.20", default-features = false, features = ["anyhow", "macros"] }
 tracing = { version = "0.1", default-features = false, optional = true }
