--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ flagset = { version = "0.4.5", default-features = false, features = ["std"] }
 fxhash = { version = "0.2", default-features = false }
 pyo3 = { version = "0.20", default-features = false, features = ["anyhow", "macros"] }
 tracing = { version = "0.1", default-features = false, optional = true }
-wasmparser = { version = "0.201", default-features = false }
+wasmparser = { version = "0.206", default-features = false, features = ["std"] }
 wasm_runtime_layer = { version = "0.3", default-features = false }
 wobbly = { version = "0.1", default-features = false, features = ["std"] }
 
