--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pyodide-webassembly-runtime-layer"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 rust-version = "1.71"
 license = "MIT OR Apache-2.0"
@@ -15,6 +15,10 @@ description = """
 WASM runtime compatibility interface implementation for the webbrowser
 WebAssembly runtime, exposed through Pyodide.
 """
+exclude = [
+    "/.github", "/.gitignore",
+    "/src/features/*.wat", "/src/features/wat2wasm.sh",
+]
 
 [dependencies]
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
