--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pyodide-webassembly-runtime-layer"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 rust-version = "1.76"
 license = "MIT OR Apache-2.0"
@@ -24,7 +24,8 @@ exclude = [
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
 flagset = { version = "0.4.5", default-features = false, features = ["std"] }
 fxhash = { version = "0.2", default-features = false }
-pyo3 = { version = "0.22", default-features = false, features = ["anyhow", "macros"] }
+pyo3 = { version = "0.22", default-features = false, features = ["macros"] }
+pyo3-error = { version = "0.2", default-features = false }
 tracing = { version = "0.1", default-features = false, optional = true }
 wasmparser = { version = "0.211", default-features = false, features = ["std", "validate"] }
 wasm_runtime_layer = { version = "0.4", default-features = false }
