Allow unknown lints for <stable clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,15 @@ jobs:
         uses: taiki-e/install-action@cargo-hack
 
       - name: Check the code style powerset
+        if: ${{ matrix.rust == 'stable' }}
         run: |
           cargo hack clippy --all \
             --feature-powerset --keep-going \
             -- -D warnings
+      
+      - name: Check the code style powerset
+        if: ${{ matrix.rust != 'stable' }}
+        run: |
+          cargo hack clippy --all \
+            --feature-powerset --keep-going \
+            -- -D warnings -A unknown-lints
