--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ fxhash = { version = "0.2", default-features = false }
 pyo3 = { version = "0.24", default-features = false, features = ["macros"] }
 pyo3-error = { version = "0.4", default-features = false }
 tracing = { version = "0.1", default-features = false, optional = true }
-wasmparser = { version = "0.227", default-features = false, features = ["std", "features", "validate"] }
+wasmparser = { version = "0.227", default-features = false, features = ["std", "features", "validate", "simd"] }
 wasm_runtime_layer = { version = "0.4", default-features = false }
 wobbly = { version = "0.1", default-features = false, features = ["std"] }
 
